# StyledConsole-Examples

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  run_examples.py
01_quickstart/: basic_styling.py  first_banner.py  hello_frame.py
02_frames/: all_border_styles.py  columns_demo.py  margins_demo.py  nested_frames.py  styles_demo.py
03_content/: table_demo.py
04_effects/: animation.py  comunity_palette_showcase.py  custom_palette_import.py  effect_showcase.py  gradient_table.py  nested_gradients.py  rainbow_cycling.py
05_banners/: dashboard.py  welcome_screens.py
06_advanced/: json_layout_demo.py  json_table_demo.py  render_policy_demo.py
07_showcases/: dashboard_patterns.py  dashboard_with_columns.py  emoji_integration_demo.py  icon_provider_demo.py  progress_demo.py
08_applications/: alerts.py  cli_menus.py  data_tables.py  html_export.py  logs_viewer.py  progress_dashboard.py  status_panels.py
09_testing/: emoji_comparison.py  test_gradient_refactor.py  test_grapheme_split.py  test_limited_terminal.py  test_nested_gradients.py  test_rich_ansi.py  test_simple_visual.py  test_zwj_precise.py  test_zwj_width.py  verify_status.py  verify_summary.py  visual_alignment.py  visual_stress_test.py
core/: animation.py  emoji_integration_demo.py  icon_provider_demo.py  progress_demo.py
frames/: nested_frames.py
gradients/: nested_gradients.py  rainbow_cycling.py
presets/: json_layout_demo.py
usecases/: html_export.py  notifications.py
validation/: benchmark.py  emoji_comparison.py  test_cursor_position.py  test_gradient_refactor.py  (+4 more)
