[project]
name = "styledconsole-examples"
version = "0.1.0"
description = "A visual laboratory for StyledConsole, demonstrating rich terminal features and best practices."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "styledconsole",
]

[tool.uv.sources]
styledconsole = { path = "../StyledConsole", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["run_examples.py"]
